--- a/accountscpd/businessmodelscenarios.html
+++ b/accountscpd/businessmodelscenarios.html
@@ -45,7 +45,7 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-s
 <div class="scenarios-container">
 <div class="header">
 <h1 class="title">Hybrid Model Scenarios</h1>
-<p class="subtitle">Real-world examples of trainers combining PAYE and self-employed work</p>
+<p class="subtitle">Below are some real-world examples of trainers combining PAYE and self-employed work, to illustrate the potential earnings and the advantages and challenges associated with each. Read each one carefully, and think about which might be most suitable for you.</p>
 </div>
 <div class="scenarios-grid">
 <div class="scenario-card">
