--- a/firstaidcpd/gymhazardspotting.html
+++ b/firstaidcpd/gymhazardspotting.html
@@ -78,7 +78,7 @@ Your browser does not support the video tag.
 <div class="counter-number"><span id="foundCount">0</span> / <span id="totalCount">8</span></div>
 </div>
 <div class="image-wrapper">
-<img src="https://pt-academy-embeds.pages.dev/firstaidcpd/Gym_Hazard_Scene.heic" alt="Gym Scene" class="gym-image" id="gymImage">
+<img src="https://pt-academy-embeds.pages.dev/firstaidcpd/Gym_Hazard_Scene.webp" alt="Gym Scene" class="gym-image" id="gymImage">
 <div class="hotspot" style="left: 11%; top: 55%;" onclick="foundHazard(this, 1)">
 <div class="hotspot-label">Click to identify</div>
 </div>
