--- a/firstaidcpd/gymhazardspotting.html
+++ b/firstaidcpd/gymhazardspotting.html
@@ -63,7 +63,7 @@ Your browser does not support the video tag.
 </div>
 </div>
 <div class="instructions">
-<div class="instruction-title">Watch the Introduction Video</div>
+<div class="instruction-title">Watch the Introduction Video!</div>
 <div class="instruction-text">Pay close attention to the gym scene. After the video, you'll identify safety hazards you spot.</div>
 </div>
 </div>
